--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <div class="container py-5">
       <h2 class="mb-4">자기소개</h2>
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <!-- 아이콘 -->
           <h4>퍼블리싱이 천직인 웹 퍼블리셔</h4>
           <p>좋아하는 일을 위해 정체되어있지 않고
@@ -60,24 +60,8 @@
             (자기소개 글과 포부 등을 적어주세요)
           </p>
         </div>
-        <div class="col-sm-4">
-          <!-- 아이콘 -->
-          <h4>자격/경력</h4>
-          <ul>
-            <li>웹디자인기능사</li>
-            <li>GTQ 1급</li>
-            <li>2022 **컴퓨터아카데미 수료</li>
-          </ul>
-        </div>
-        <div class="col-sm-4">
-          <h4>연락처</h4>
-          <p>hong-gd@naver.com</p>
-          <h4>SNS</h4>
-          <ul>
-            <li>트위터</li>
-            <li>페이스북</li>
-            <li>카카오</li>
-          </ul>
+        <div class="col-sm-6 about-img">
+          <img class="w-100" src="images/undraw_start_building_re_xani.svg" alt="">
         </div>
       </div><!-- row -->
     </div><!-- container -->
@@ -86,32 +70,45 @@
   <section id="skills" class="bg-warning">
     <div class="container py-5">
       <h2  class="mb-4">직무능력</h2>
-      <ul class="">
-        <li>
-          <span>HTML</span>
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:70%"></div>
-          </div>
-        </li>
-        <li>
-          <span>CSS</span>
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:80%"></div>
-          </div>
-        </li>
-        <li>
-          <span>Javascript & jQuery</span>
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:60%"></div>
-          </div>
-        </li>
-        <li>
-          <span>PHOTOSHOP</span>
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:85%"></div>
-          </div>
-        </li>
-      </ul>
+      <div class="row">
+        <div class="col-sm-6">
+          <ul class="">
+            <li>
+              <span>HTML</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:70%"></div>
+              </div>
+            </li>
+            <li>
+              <span>CSS</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:80%"></div>
+              </div>
+            </li>
+            <li>
+              <span>Javascript & jQuery</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:60%"></div>
+              </div>
+            </li>
+            <li>
+              <span>PHOTOSHOP</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:85%"></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-6 licence">
+          <!-- 아이콘 -->
+          <h4>자격/경력</h4>
+          <ul>
+            <li>웹디자인기능사</li>
+            <li>GTQ 1급</li>
+            <li>2022 **컴퓨터아카데미 수료</li>
+          </ul>
+        </div>
+      </div><!-- row -->
     </div><!-- container -->
   </section>
 
@@ -152,6 +149,23 @@
       </div><!-- row -->
     </div><!-- container -->
   </section>
+
+
+  <footer>
+    <div class="container py-5 text-center">
+      <div>
+        <h4>연락처</h4>
+        <p>hong-gd@naver.com</p>
+        <h4>SNS</h4>
+        <ul>
+          <li>트위터</li>
+          <li>페이스북</li>
+          <li>카카오</li>
+        </ul>
+      </div>
+      <p>&copy; 홍길동 포트폴리오 2022</p>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
