--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
 
   <section id="works">
     <div class="container py-5">
-      <h2>작품소개</h2>
+      <h2 class="mb-4">작품소개</h2>
       <div class="row">
         <div class="col-sm-4">
           <div class="card p-0">
